--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	        <div class="border-bottom"></div>
 	        <div class="border-left"></div>
 	        <div class="inner-content">
-	          <a href="#"><img src="img/curso2.jpg" alt=""></a>
+	          <a href="#"><img src="img/curso22.jpg" alt=""></a>
 	          <p>Cursos</p> 
 	        </div>
 	      </div><!-- box -->
@@ -66,7 +66,7 @@
 	        <div class="border-bottom"></div>
 	        <div class="border-left"></div>
 	        <div class="inner-content">
-	          <a href="#"><img src="img/serviços3.jpg" alt=""></a>
+	          <a href="#"><img src="img/serviços33.jpg" alt=""></a>
 	          <p>Aplicação InsulFilm</p>
 	        </div>
 	      </div><!-- box -->
@@ -77,7 +77,7 @@
 	        <div class="border-bottom"></div>
 	        <div class="border-left"></div>
 	        <div class="inner-content">
-	         <a href="#"><img src="img/envelopamento.jpg" alt=""></a>
+	         <a href="#"><img src="img/envelopamento2.jpg" alt=""></a>
 	         <p>Envelopamento</p>
 	        </div>
 	      </div>
