--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
                 <div>
                     <h2 class="title404_1">Ei desculpa ae! ;D</h2>
                     <p> Sabe como é né. A página que você está procurando pode ter sido removida, teve seu nome alterado ou está temporariamente indisponível. </p>
-                     <p> Por favor, tente acessar outros conteúdos clicando no a baixo. Volte para <a href="index.html">HOME</a> clicando no logo que irá para a página principal tenta lá.</p>
+                     <p> Por favor, tente acessar outros conteúdos clicando nos links a baixo. Volte para <a href="index.html">HOME</a> clicando no logo que irá para a página principal tenta lá.</p>
                 </div>
             </div>  
           </div> 
