atualização home, servicos, cursos e contato

--- a/404.html
+++ b/404.html
@@ -13,23 +13,23 @@
 </head>
 
 <body>
-<!--==============================content=================================-->
-<div id="content">
-    <!--==============================row10=================================-->
-    <div class="row_10">
-        <div class="container">
-          <div class="row block-404">
-            <div class="col-lg-7 col-md-7 col-sm-7">
-                <figure class="img-polaroid"><a href="index.html"><img src="img/404.png" alt="Clique aqui para voltar"></a></figure>
-            </div>
-            <div class="col-lg-3 col-md-5 col-sm-5 forminfo">
-                <div>
-                    <h2 class="title404_1">Ei desculpa ae! ;D</h2>
-                    <p> Sabe como é né. A página que você está procurando pode ter sido removida, teve seu nome alterado ou está temporariamente indisponível. </p>
-                     <p> Por favor, tente acessar outros conteúdos clicando nos links a baixo. Volte para <a href="index.html">HOME</a> clicando no logo que irá para a página principal tenta lá.</p>
+    <!--==============================content=================================-->
+    <div id="content">
+        <!--==============================row10=================================-->
+        <div class="row_10">
+            <div class="container">
+              <div class="row block-404">
+                <div class="col-lg-7 col-md-7 col-sm-7">
+                    <figure class="img-polaroid"><a href="index.html"><img src="img/404.png" alt="Clique aqui para voltar"></a></figure>
                 </div>
-            </div>  
-          </div> 
+                <div class="col-lg-3 col-md-5 col-sm-5 forminfo">
+                    <div>
+                        <h2 class="title404_1">Ei desculpa ae! ;D</h2>
+                        <p> Sabe como é né. A página que você está procurando pode ter sido removida, teve seu nome alterado ou está temporariamente indisponível. </p>
+                                             <p> Por favor, tente acessar outros conteúdos clicando nos links a baixo. Volte para <a href="index.html">HOME</a> clicando no logo que irá para a página principal tenta lá.</p>
+                    </div>
+                </div>  
+            </div> 
         </div>
     </div>
 </div>
@@ -43,19 +43,29 @@
             <li><a href="servicos.html" class="menu-footer-links">Serviços</a></li>
             <li><a href="cursos" class="menu-footer-links">Cursos</a></li>
             <li><a href="contato" class="menu-footer-links">Contato</a></li>
-          </ul>
-        </div>
-        <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-4 footerlogo footercol">
-                <a class="smalllogo2 logo" href="index.html"><img src="img/logofooter.png" alt=""></a>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 footercol">
-              <p class="footerpriv">&copy; 2015 Todo Direito Reservado <br>  
-            </div>
-        </div>
+        </ul>
     </div>
+    <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-4 footerlogo footercol">
+            <a class="smalllogo2 logo" href="index.html"><img src="img/logofooter.png" alt=""></a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 footercol">
+          <p class="footerpriv">&copy; 2015 Todo Direito Reservado <br>  
+          </div>
+      </div>
+  </div>
 </footer>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/tm-scripts.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-64356056-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
