--- a/index.html
+++ b/index.html
@@ -15,28 +15,29 @@
 			<h1><a href="index.html" class="logo">logotipo</a></h1>
 			<nav class="main-nav">
 				<ul class="main-nav-link">
-					<li class="main-nav-item"><a href="index.html" class="main-nav-links current" >Home</a></li>
+					<li class="main-nav-item"><a href="index.html" class="main-nav-links current active" >Home</a></li>
 					<li class="main-nav-item"><a href="sobre.html" class="main-nav-links">Sobre</a></li>
 					<li class="main-nav-item"><a href="servicos.html" class="main-nav-links">Serviços</a></li>
 					<li class="main-nav-item"><a href="cursos.html" class="main-nav-links">Cursos</a></li>
 					<li class="main-nav-item"><a href="contato.html" class="main-nav-links">Contato</a></li>
-					<li class="main-nav-item socias"><a href="#" class="ico-facebook">facebook</a></li>
-					<li class="main-nav-item socias"><a href="#" class="ico-instagram">instagram</a></li>
+					<li class="main-nav-item socias"><a href="https://www.facebook.com/r2blindfilm" target="_blank" class="ico-facebook">facebook</a></li>
+					<li class="main-nav-item socias"><a href="https://instagram.com/r2blindfilm" target="_blank" class="ico-instagram">instagram</a></li>
 				</ul>
 			</nav>
 		</div>
 	</header>
-
+	<hr>
 	<section class="main-carrosel">
 		<figure>
-	   <span class="trs next"></span>
-	   <span class="trs prev"></span>
-		   <div id="slider">
-		      <a href="#" class="trs"><img src="img/carrosel1.jpg" alt=""></a>
-		      <a href="#" class="trs"><img src="img/carrosel2.jpg" alt=""></a>
-		   </div>
-   <figcaption></figcaption>
-	</figure>	
+			<span class="trs next"></span>
+			<span class="trs prev"></span>
+			<div id="slider">
+				<a href="servicos.html" class="trs"><img src="img/carrosel1.jpg" alt=""></a>
+				<a href="sobre.html" class="trs"><img src="img/carrosel2.jpg" alt=""></a>
+				<a href="cursos.html" class="trs"><img src="img/carrosel3.jpg" alt=""></a>
+			</div>
+			<figcaption></figcaption>
+		</figure>	
 <!-- 		<div class="carrosel">
 			<button class="prev">Anterior</button>
 			<ul class="tamanho">
@@ -48,72 +49,73 @@
 	</section>
 
 	<section class="container servicos">
-	    <h2>Serviços</h2>
-	      <div class="box">
-	        <div class="border-top"></div>
-	        <div class="border-right"></div>
-	        <div class="border-bottom"></div>
-	        <div class="border-left"></div>
-	        <div class="inner-content">
-	          <a href="#"><img src="img/curso22.jpg" alt=""></a>
-	          <p>Cursos</p> 
-	        </div>
-	      </div><!-- box -->
+		<h2>Serviços <hr></h2>
 
-	      <div class="box">
-	        <div class="border-top"></div>
-	        <div class="border-right"></div>
-	        <div class="border-bottom"></div>
-	        <div class="border-left"></div>
-	        <div class="inner-content">
-	          <a href="#"><img src="img/serviços33.jpg" alt=""></a>
-	          <p>Aplicação InsulFilm</p>
-	        </div>
-	      </div><!-- box -->
+		<div class="box">
+			<div class="border-top"></div>
+			<div class="border-right"></div>
+			<div class="border-bottom"></div>
+			<div class="border-left"></div>
+			<div class="inner-content">
+				<a href="cursos.html"><img src="img/curso22.jpg" alt=""></a>
+				<p>Cursos</p> 
+			</div>
+		</div><!-- box -->
 
-	      <div class="box">
-	        <div class="border-top"></div>
-	        <div class="border-right"></div>
-	        <div class="border-bottom"></div>
-	        <div class="border-left"></div>
-	        <div class="inner-content">
-	         <a href="#"><img src="img/envelopamento2.jpg" alt=""></a>
-	         <p>Envelopamento</p>
-	        </div>
-	      </div>
+		<div class="box">
+			<div class="border-top"></div>
+			<div class="border-right"></div>
+			<div class="border-bottom"></div>
+			<div class="border-left"></div>
+			<div class="inner-content">
+				<a href="servicos.html"><img src="img/serviços/3.jpg" height="150" width="150" alt=""></a>
+				<p>Aplicação InsulFilm</p>
+			</div>
+		</div><!-- box -->
 
-	      <div class="box">
-	        <div class="border-top"></div>
-	        <div class="border-right"></div>
-	        <div class="border-bottom"></div>
-	        <div class="border-left"></div>
-	        <div class="inner-content">
-	         <a href="#"><img src="img/residencial.jpg" alt=""></a>
-	         <p>Residencial</p>
-	        </div>
-	      </div>
+<!-- 		<div class="box">
+			<div class="border-top"></div>
+			<div class="border-right"></div>
+			<div class="border-bottom"></div>
+			<div class="border-left"></div>
+			<div class="inner-content">
+				<a href="#"><img src="img/envelopamento2.jpg" alt=""></a>
+				<p>Envelopamento</p>
+			</div>
+		</div> -->
 
-	      <div class="box">
-	        <div class="border-top"></div>
-	        <div class="border-right"></div>
-	        <div class="border-bottom"></div>
-	        <div class="border-left"></div>
-	        <div class="inner-content">
-	         <a href="#"><img src="img/ofertas.png" alt=""></a>
-	         <p>Diversos</p>
-	        </div>
-	      </div>
+		<div class="box">
+			<div class="border-top"></div>
+			<div class="border-right"></div>
+			<div class="border-bottom"></div>
+			<div class="border-left"></div>
+			<div class="inner-content">
+				<a href="servicos.html"><img src="img/serviços/1.jpg" height="200" width="300" alt=""></a>
+				<p>Residencial</p>
+			</div>
+		</div>
 
-	      <div class="box">
-	        <div class="border-top"></div>
-	        <div class="border-right"></div>
-	        <div class="border-bottom"></div>
-	        <div class="border-left"></div>
-	        <div class="inner-content">
-	         <a href="#"><img src="img/insulfilm-diversos.jpg" alt=""></a>
-	         <p>Produtos</p>
-	        </div>
-	      </div>
+		<div class="box">
+			<div class="border-top"></div>
+			<div class="border-right"></div>
+			<div class="border-bottom"></div>
+			<div class="border-left"></div>
+			<div class="inner-content">
+				<a href="contato.html"><img src="img/ofertas.png" alt=""></a>
+				<p>Diversos</p>
+			</div>
+		</div>
+
+		<div class="box">
+			<div class="border-top"></div>
+			<div class="border-right"></div>
+			<div class="border-bottom"></div>
+			<div class="border-left"></div>
+			<div class="inner-content">
+				<a href="contato.html"><img src="img/insulfilm-diversos.jpg" alt=""></a>
+				<p>Produtos</p>
+			</div>
+		</div>
 		
 	</section>
 	
@@ -121,12 +123,12 @@
 		<div class="rodape">
 			<div class="container">
 				<div class="grid_4 autorais-footer">	
-						<small>&copy; 2015 R2BlindFilm <br> Todo Direitos Reservados. <br> <!-- <a href="http://othiago.tk"><img src="img/ico/logofooter.png" class="criador" alt="Criado por www.othiago.tk"></a> --></small>
+					<small>&copy; 2015 R2BlindFilm <br> Todo Direitos Reservados. <br> <!-- <a href="http://othiago.tk"><img src="img/ico/logofooter.png" class="criador" alt="Criado por www.othiago.tk"></a> --></small>
 				</div>			
 				<div class="grid_4 end-footer" >	
 					<ul >
 						<li>
-								Estrada das lágrimas, 2836<bR>Sacomã<br>04244-000<br>(11)3843-7062<br>contato@r2blindfilm.com.br
+							Estrada das lágrimas, 2836<bR>Sacomã<br>04244-000<br>(11)3843-7062<br>contato@r2blindfilm.com.br
 						</li>
 					</ul>
 				</div>
@@ -143,11 +145,22 @@
 		</div>
 		<div class="criador">
 			<div class="criador-link">
-				<a href="http://othiago.tk" target="_blank" >Criado com ♥ pelo <img src="img/ico/ico.ico" alt=""></a>
+				<a href="http://othiago.tk" target="_blank" ><center>
+					Criado com ♥ pelo <img src="img/ico/ico.ico" alt="">
+				</center></a>
 			</div>
 		</div>
 	</footer>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+		ga('create', 'UA-64356056-1', 'auto');
+		ga('send', 'pageview');
+
+	</script>
 </body>
 </html>
 
