site finalizado, e em produção

--- a/cursos.html
+++ b/cursos.html
@@ -33,7 +33,7 @@
 	<hr>
 	<br>
 	<div class="container cursos titulo">
-		<h1>Curso Insulfim - Aplicação de Películas Automotivas</h1>
+		<h1>Curso Insulfilm - Aplicação de Películas Automotivas</h1>
 		<tr>
 			<td>
 				<p>
@@ -45,10 +45,11 @@
 			<td>
 				
 				<ol>
-					<li>&#10004 Pulverizador (Bomba de água) </li>
-					<li>&#10004Conhecendo a película.</li>
-					<li>&#10004 Recorte do film </li>
-					<li>&#10004 Modelagem do vidro traseiro</li>
+					<li> Conhecendo a película</li>
+					<li> Recorte do film </li>
+					<li> Limpeza dos vidros e aplicação</li>
+					<li> Modelagem do vidro traseiro</li>
+					<li> Acabamento</li>
 				</ol>
 				
 			</td>
@@ -60,7 +61,7 @@
 		</tr>
 		<tr>
 			<td>
-				O curso de aplicação de insul film na R2 Blind Film´s será dividido em 4 partes, sendo realizado em 2 dias com carga horária de 3 horas, totalizando 6 horas para a finalização do curso. O inicio das aulas será as 18:30hrs e termino as 21:30hrs.
+				O curso de aplicação de insul film na R2 Blind Film´s será dividido em 4 partes, sendo realizado em 2 dias com carga horária de 3 horas, totalizando 6 horas para a finalização do curso.
 				O aluno aprenderá teoria e noções técnicas de aplicação, adquirindo conhecimento suficiente para iniciar na pratica,sendo que a performance profissional depende do empenho e a vontade de aprender de cada aluno.
 				<p>Conhecendo as ferramentas para aplicação</p>
 				&#8226 Pulverizador (Bomba de água) <br>
@@ -130,26 +131,26 @@
 
 		<div class="cursos-grade ">
 			<tr>
-				<td><p>Próxima Turmas</p></td>
+				<td><p>Data / Hora</p></td>
 			</tr>
 			<tr>
-				<td>&#10003 10/06 a 10/06 <br> 9hrs às 10hrs <br> Sacomã-SP</td>
+				<td>&#10003 Segunda e Terça-feira 18:30hrs - 21:30hrs.</td>
 			</tr>
 			<br><br>
-			<tr>
+			<!-- <tr>
 				<td>&#10003 10/06 a 10/06 <br> 9hrs às 10hrs <br> Sacomã-SP</td>
-			</tr>
+			</tr> -->
 		</div>
 		<div class="cursos-grade ">
 			<tr>
 				<td><p>Preços</p></td>
 			</tr>
 			<tr>
-				<td>&#10003 À vista<br> R$2000,00</td>
+				<td>&#10003 À vista<br> R$399,00</td>
 			</tr>
 			<br><br>
 			<tr>
-				<td>&#10003 7 vezes <br> R$300,00</td>
+				<td>&#10003 2 vezes <br> consulte-nos</td>
 			</tr>
 		</div>
 		<div class="cursos-grade ">
@@ -166,7 +167,7 @@
 				<td><p>Inscrição</p></td>
 			</tr>
 			<tr>
-				<td>Telefone: <br>(11)3843-7062<br> Email: contato@r2blindfilm.com.br</td>
+				<td>Telefone: <br>(11) 3843-7062<br> Email: contato@r2blindfilm.com.br</td>
 
 			</tr>
 		</div>
@@ -182,7 +183,7 @@
 				<div class="grid_4 end-footer" >	
 					<ul >
 						<li>
-							Estrada das lágrimas, 2836<bR>Sacomã<br>04244-000<br>(11)3843-7062<br>contato@r2blindfilm.com.br
+							Estrada das lágrimas, 2836<bR>Sacomã<br>04244-000<br>(11) 3843-7062<br>contato@r2blindfilm.com.br
 						</li>
 					</ul>
 				</div>
