--- a/servicos.html
+++ b/servicos.html
@@ -51,7 +51,7 @@
 								</ul>
 							</li>
 							<li>
-								<a href="#" >Cores e Trasnparência</a>
+								<a href="#" >Cores e Transparência</a>
 								<ul>
 									<p>						
 										Visibilidade em 35%-20%-5% <br><br> 
@@ -123,7 +123,7 @@
 								<a href="#" class="search-itens-link">O que é?</a>
 								<ul>
 									<p>				
-										Película de blindagem branca para vidros. Também fabricada nas versões BLINDADO-ELITE, BLINDADO-PRIVACIDADE e BLINDAGEM-DESIGN
+										Pelicula com uma tecnologia diferenciada das comuns, aplicada com os vidros do carro removidos ocupando todos os espaços do mesmo fazendo com que a resistencia do vidro aumente muito mais.
 									</p>
 								</ul>
 							</li>
@@ -132,19 +132,19 @@
 								<a href="#" >Cores e Trasnparência</a>
 								<ul>
 									<p>						
-										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, consequatur praesentium quod, illum dolor quaerat recusandae quisquam necessitatibus molestiae non reprehenderit modi, quis neque autem esse laudantium. Recusandae, cumque nisi?
+										Pelicula transparente ou em visibilidade de 20%
 									</p>
 								</ul>
 							</li>
-<!-- 
+
 							<li>
 								<a href="#" >Aplicação</a>
 								<ul>
 									<p>						
-										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error aliquid, distinctio neque consequuntur, perferendis animi qui optio a libero dolor laboriosam dignissimos vel cupiditate, deserunt necessitatibus minima. At, delectus, pariatur?
+										Removemos os vidros do veiculo e aplicamos a pelicula em todos os espaços do vidro.
 									</p>
 								</ul>
-							</li> -->
+							</li>
 <!-- 
 							<li>
 								<a href="#" >Benefícios adicionais </a>
@@ -158,7 +158,7 @@
 								<a href="#" >Garantia</a>
 								<ul>
 									<p>
-										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt pariatur labore inventore velit est tempora, explicabo consequuntur nostrum corrupti natus! Commodi, architecto iusto optio alias cumque perferendis est aliquid itaque!
+										2 anos
 									</p>
 								</ul>
 							</li>
@@ -166,7 +166,7 @@
 								<a href="#" >Principais benefícios</a>
 								<ul>
 									<p>
-										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum repellat, in, ea amet libero reprehenderit id harum ad vitae beatae? Ducimus pariatur a sunt repudiandae possimus necessitatibus corporis beatae non.
+										Embora qualquer tipo de pelicula ja torna o vidro mais resistente,essa pelicula é ainda mais,tanto pela tecnologia anti-vandalismo quanto pelo procedimento de aplicaçao,onde é protegido o vidro por inteiro,nao somente até sua metade.
 									</p>
 								</ul>
 							</li>
