correções banner e texto

--- a/servicos.html
+++ b/servicos.html
@@ -115,7 +115,7 @@
 						<div class="controle-solar">
 							<img src="img/serviços/2.jpg" height="250" width="400" alt="">
 							<p style="padding-right: 173px;">
-								Anti-Vandalismo
+								Pel. Resistência
 							</p>
 						</div>
 						<div class="servicos-link">
@@ -129,7 +129,7 @@
 							</li>
 
 							<li>
-								<a href="#" >Cores e Trasnparência</a>
+								<a href="#" >Cores e Transparência</a>
 								<ul>
 									<p>						
 										Pelicula transparente ou em visibilidade de 20%
