correção nomenclatura serviço pelicula de resistência

--- a/servicos.html
+++ b/servicos.html
@@ -114,8 +114,8 @@
 					<ul id="nav" class="search-itens texto">
 						<div class="controle-solar">
 							<img src="img/serviços/2.jpg" height="250" width="400" alt="">
-							<p style="padding-right: 173px;">
-								Pel. Resistência
+							<p style="padding-right: 93px;">
+								Película de Resistência
 							</p>
 						</div>
 						<div class="servicos-link">
