--- a/servicos.html
+++ b/servicos.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 	<meta charset="UTF-8">
-	<title>R2BlindFilm</title>
+	<title>BLIND GLASS FILM</title>
 	<script src="js/jquery-1.11.0.min.js"></script>
 	<link rel="icon" href="img/ico/icon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/style.css">
@@ -24,8 +24,8 @@
 					<li class="main-nav-item"><a href="servicos.html" class="main-nav-links active">Serviços</a></li>
 					<li class="main-nav-item"><a href="cursos.html" class="main-nav-links">Cursos</a></li>
 					<li class="main-nav-item"><a href="contato.html" class="main-nav-links">Contato</a></li>
-					<li class="main-nav-item socias"><a href="https://www.facebook.com/r2blindfilm" target="_blank" class="ico-facebook">facebook</a></li>
-					<li class="main-nav-item socias"><a href="https://instagram.com/r2blindfilm" target="_blank" class="ico-instagram">instagram</a></li>
+					<li class="main-nav-item socias"><a href="https://www.facebook.com/blindglassfilm" target="_blank" class="ico-facebook">facebook</a></li>
+					<li class="main-nav-item socias"><a href="https://instagram.com/blindglassfilm" target="_blank" class="ico-instagram">instagram</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -115,7 +115,7 @@
 						<div class="controle-solar">
 							<img src="img/serviços/2.jpg" height="250" width="400" alt="">
 							<p style="padding-right: 93px;">
-								Película de Resistência
+								BLIND GLASS FILM
 							</p>
 						</div>
 						<div class="servicos-link">
@@ -194,19 +194,19 @@
 	<div class="rodape">
 		<div class="container">
 			<div class="grid_4 autorais-footer">	
-				<small>&copy; 2015 R2BlindFilm <br> Todo Direitos Reservados. <br> <!-- <a href="http://othiago.tk"><img src="img/ico/logofooter.png" class="criador" alt="Criado por www.othiago.tk"></a> --></small>
+				<small>&copy; 2017 BLIND GLASS FILM <br> Todo Direitos Reservados. <br> <!-- <a href="http://othiago.tk"><img src="img/ico/logofooter.png" class="criador" alt="Criado por www.othiago.tk"></a> --></small>
 			</div>			
 			<div class="grid_4 end-footer" >	
 				<ul >
 					<li>
-						Estrada das lágrimas, 2836<bR>Sacomã<br>04244-000<br>(11)3843-7062<br>contato@r2blindfilm.com.br
+						Instalaçoes nas dependencias das concessionarias parceiras<br>(11)94747-0185<br>
 					</li>
 				</ul>
 			</div>
 			<div class="grid_4">	
 				<ul  class="menu-footer">
 					<li><a href="index.html" class="menu-footer-links">Home</a></li>
-					<li><a href="sobre.html"class="menu-footer-links">Sobre</a></li>
+					<li><a href="sobre.html" class="menu-footer-links">Sobre</a></li>
 					<li><a href="servicos.html" class="menu-footer-links">Serviços</a></li>
 					<li><a href="cursos" class="menu-footer-links">Cursos</a></li>
 					<li><a href="contato" class="menu-footer-links">Contato</a></li>
