Inserted icon whats

--- a/cursos.html
+++ b/cursos.html
@@ -7,6 +7,7 @@
 	<link rel="icon" href="img/ico/icon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 	<script type="text/javascript" src="js/slide.js"></script>
 	<script type="text/javascript" src="js/jquery.navgoco.min.js"></script>
 	<script src="js/script.js"></script>
@@ -33,7 +34,7 @@
 	<hr>
 	<br>
 	<div class="container cursos titulo">
-		<h1>Curso Insulfilm - Aplicação de Películas Automotivas</h1>
+		<h1>Cursos Insulfilm - Aplicação de Películas Automotivas</h1>
 		<tr>
 			<td>
 				<p>
@@ -134,7 +135,7 @@
 				<td><p>Data / Hora</p></td>
 			</tr>
 			<tr>
-				<td>&#10003 Segunda e Terça-feira 18:30hrs - 21:30hrs.</td>
+				<td>&#10003 Segundas e Terças 18:30hs - 21:30hs.</td>
 			</tr>
 			<br><br>
 			<!-- <tr>
@@ -146,11 +147,11 @@
 				<td><p>Preços</p></td>
 			</tr>
 			<tr>
-				<td>&#10003 À vista<br> R$399,00</td>
+				<td>&#10003 À vista<br> R$920,00</td>
 			</tr>
 			<br><br>
 			<tr>
-				<td>&#10003 2 vezes <br> consulte-nos</td>
+				<td>&#10003 3 vezes <br> consulte-nos forma de pagamento</td>
 			</tr>
 		</div>
 		<div class="cursos-grade ">
@@ -158,7 +159,7 @@
 				<td><p>Local das Aulas</p></td>
 			</tr>
 			<tr>
-				<td>Estrada das Lágrimas, 2836 <br>Sacomã 04244-000 SP</td>
+				<td>a definir</td>
 			</tr>
 		</div>
 
@@ -167,7 +168,7 @@
 				<td><p>Inscrição</p></td>
 			</tr>
 			<tr>
-				<td>Telefone: <br>(11) 3843-7062<br> Email: contato@r2blindfilm.com.br</td>
+				<i class="fa fa-whatsapp" aria-hidden="true"></i><br>(11)94747-0185<br>
 
 			</tr>
 		</div>
