--- a/contato.html
+++ b/contato.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 	<meta charset="UTF-8">
-	<title>R2BlindFilm</title>
+	<title>BLIND GLASS FILM</title>
 	<script src="js/jquery-1.11.0.min.js"></script>
 	<link rel="icon" href="img/ico/icon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/style.css">
@@ -24,8 +24,8 @@
 					<li class="main-nav-item"><a href="servicos.html" class="main-nav-links">Serviços</a></li>
 					<li class="main-nav-item"><a href="cursos.html" class="main-nav-links">Cursos</a></li>
 					<li class="main-nav-item"><a href="contato.html" class="main-nav-links active">Contato</a></li>
-					<li class="main-nav-item socias"><a href="https://www.facebook.com/r2blindfilm" target="_blank" class="ico-facebook">facebook</a></li>
-					<li class="main-nav-item socias"><a href="https://instagram.com/r2blindfilm" target="_blank" class="ico-instagram">instagram</a></li>
+					<li class="main-nav-item socias"><a href="https://www.facebook.com/blindglassfilm" target="_blank" class="ico-facebook">facebook</a></li>
+					<li class="main-nav-item socias"><a href="https://instagram.com/blindglassfilm" target="_blank" class="ico-instagram">instagram</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -34,7 +34,7 @@
 	<br><br>
 	<div class="container contato">
 		<ul>
-			<li><p><strong>Endereço:</strong></p>Estrada das lágrimas, 2836<bR>Sacomã<br>São Paulo <br>04244-000<br><br><a href="tel:+551138437062">(11) 94747-0185</a><br><a href="mailto:contato@r2blindfilm.com.br"><strong>contato@r2blindfilm.com.br</strong></a></li>
+			<li><p><strong>Endereço:</strong></p>Instalações nas dependencias das concessionarias parceiras<br><br><a href="tel:+551138437062">(11) 94747-0185</a><br><!-- <a href="mailto:contato@r2blindfilm.com.br"><strong>contato@r2blindfilm.com.br</strong></a> --></li>
 			<li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29244.258069677617!2d-46.58909997712406!3d-23.621102282987476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5c9fac15d5ab%3A0xafd89c98f88c7f1d!2sAv.+Estrada+das+L%C3%A1grimas%2C+2836+-+S%C3%A3o+Jo%C3%A3o+Climaco%2C+S%C3%A3o+Paulo+-+SP!5e0!3m2!1spt-BR!2sbr!4v1434929107831" width="600" height="450" frameborder="0" style="border:0"></iframe></li>
 			
 		</ul>
@@ -47,19 +47,19 @@
 		<div class="rodape">
 			<div class="container">
 				<div class="grid_4 autorais-footer">	
-					<small>&copy; 2015 R2BlindFilm <br> Todo Direitos Reservados. <br> <!-- <a href="http://othiago.tk"><img src="img/ico/logofooter.png" class="criador" alt="Criado por www.othiago.tk"></a> --></small>
+					<small>&copy; 2017 R2BlindFilm <br> Todo Direitos Reservados. <br> <!-- <a href="http://othiago.tk"><img src="img/ico/logofooter.png" class="criador" alt="Criado por www.othiago.tk"></a> --></small>
 				</div>			
 				<div class="grid_4 end-footer" >	
 					<ul >
 						<li>
-							Estrada das lágrimas, 2836<bR>Sacomã<br>04244-000<br>(11) 94747-0185<br>contato@r2blindfilm.com.br
+							Instalações nas dependencias das concessionarias parceiras<br>(11)94747-0185<br>
 						</li>
 					</ul>
 				</div>
 				<div class="grid_4">	
 					<ul  class="menu-footer">
 						<li><a href="index.html" class="menu-footer-links">Home</a></li>
-						<li><a href="sobre.html"class="menu-footer-links">Sobre</a></li>
+						<li><a href="sobre.html" class="menu-footer-links">Sobre</a></li>
 						<li><a href="servicos.html" class="menu-footer-links">Serviços</a></li>
 						<li><a href="cursos" class="menu-footer-links">Cursos</a></li>
 						<li><a href="contato" class="menu-footer-links">Contato</a></li>
