--- a/sobre.html
+++ b/sobre.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 	<meta charset="UTF-8">
-	<title>R2BlindFilm</title>
+	<title>BLIND GLASS FILM</title>
 	<link rel="icon" href="img/ico/icon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/normalize.css">
@@ -20,8 +20,8 @@
 					<li class="main-nav-item"><a href="servicos.html" class="main-nav-links">Serviços</a></li>
 					<li class="main-nav-item"><a href="cursos.html" class="main-nav-links">Cursos</a></li>
 					<li class="main-nav-item"><a href="contato.html" class="main-nav-links">Contato</a></li>
-					<li class="main-nav-item socias"><a href="https://www.facebook.com/r2blindfilm" target="_blank" class="ico-facebook">facebook</a></li>
-					<li class="main-nav-item socias"><a href="https://instagram.com/r2blindfilm" target="_blank" class="ico-instagram">instagram</a></li>
+					<li class="main-nav-item socias"><a href="https://www.facebook.com/blindglassfilm" target="_blank" class="ico-facebook">facebook</a></li>
+					<!-- <li class="main-nav-item socias"><a href="https://instagram.com/blindglassfilm" target="_blank" class="ico-instagram">instagram</a></li> -->
 				</ul>
 			</nav>
 		</div>
@@ -41,16 +41,18 @@
 			<li>
 				<div class="desc-sobre">					
 					<h2>Sobre a loja R2BlindFilm.</h2>
+Somos a BLIN GLASS, uma empresa que atua a mais de 10 anos no segmento de comercio e terceirização de películas solares (insul film) e película de segurança. 
+Fundada em 10 de Junho de 2004, atuamos em parceria com as principais marcas de concessionárias automotivas (Renault, Nissan, Citroen, Ford, Toyota, Wolkswagen, entre outras).
+<br><br>
+Alem da aplicação da película comum (insul film), oferecemos com muito sucesso, a novidade BLIND GLASS FILM, uma película de resistência, aplicada nos vidros do automóvel. Essa aplicação é feita com os vidros removidos, isto é, preenchendo todos os espaços do vidro, tornando-o muito mais resistente a quebra e estilhaçamento.  
+<br><br>
+Na medida em que são fabricados e vendidos milhares de carros no país, aumentando a frota automotiva, paralelamente, vem crescendo o índice de violência, assaltos, furtos, seqüestros relâmpago, etc., isso fez com que a procura pela película protetora crescesse absurdamente. Hoje a película protetora deixou de ser apenas um acessório estético e passou a ser um acessório que oferece privacidade e segurança para os ocupantes do veiculo.
 
-					<p>
-						Somos a R2 Blind Film´s, uma empresa que atua a mais de 10 anos no segmento de terceirização de aplicação de películas solares (insul-film), película de resistência e arquitetura. Com toda experiência no mercado, passamos a detectar um grave problema no segmento, a falta de profissionais com aplicação de qualidade.
-						Na medida em que são fabricados e vendidos milhares de carros diariamente, aumentando sua frota no país, vem crescendo também o índice de violência, assaltos, furtos de veículos, seqüestros relâmpago, etc., isso fez com que a procura pela película crescesse absurdamente. Hoje a película solar(insul-film) deixou de ser apenas um acessório estético e passou a ser um acessório de privacidade e segurança, por isso, tomamos a decisão de treinar e capacitar profissionais de aplicação de insul-film para que novos profissionais de qualidade passem a atender a grande demanda de veículos.
-					</p>
-					<p>
-						Fundada em 10 de Junho de 2004, especializada em terceirizações em aplicação de películas de controle solar, atuando a maior parte dos anos com parcerias em concessionárias, sendo elas as principais marcas, Renault, Citroen, Toyota, Wolkswagen, Nissan e outras. Tendo como sede nossa loja no endereço Estrada das lagrimas 2836 no Ipiranga atendendo também os clientes externos, dentro de nossas variedades de produtos e serviços  focamos na aplicação de películas solares em autos, residências e empresas,na novidade BLIND GLASS, uma película de resistência aplicada nos vidros do carro, essa aplicação é feita com os vidros removidos, isto é, no vidro por inteiro, desta forma, os vidros ficarão mais resistentes do que as películas de anti-vandalismo comuns, dificultando a quebra e o estilhaçamento dos vidros.
-						Os nossos cursos de aplicação, são diferenciados por serem rápidos e objetivos.
-						Venha tomar um café conosco e conhecer nossos serviços.
-					</p>
+
+ 
+<p style="text-align: right; font-style: italic; ">Somos a BLIND GLASS FILM. 
+	Prazer em atendê-los.</p>
+
 				</div>
 
 			</li>
@@ -63,19 +65,19 @@
 		<div class="rodape">
 			<div class="container">
 				<div class="grid_4 autorais-footer">	
-					<small>&copy; 2015 R2BlindFilm <br> Todo Direitos Reservados. <br> <!-- <a href="http://othiago.tk"><img src="img/ico/logofooter.png" class="criador" alt="Criado por www.othiago.tk"></a> --></small>
+					<small>&copy; 2017 BLIND GLASS FILM <br> Todo Direitos Reservados. <br> <!-- <a href="http://othiago.tk"><img src="img/ico/logofooter.png" class="criador" alt="Criado por www.othiago.tk"></a> --></small>
 				</div>			
 				<div class="grid_4 end-footer" >	
 					<ul >
 						<li>
-							Estrada das lágrimas, 2836<bR>Sacomã<br>04244-000<br>(11)3843-7062<br>contato@r2blindfilm.com.br
+							Atendemos nas concessionárias mais próximas da sua região consulte-nos<br>Whats: (11) 94747-0185<br>
 						</li>
 					</ul>
 				</div>
 				<div class="grid_4">	
 					<ul  class="menu-footer">
 						<li><a href="index.html" class="menu-footer-links">Home</a></li>
-						<li><a href="sobre.html"class="menu-footer-links">Sobre</a></li>
+						<li><a href="sobre.html" class="menu-footer-links">Sobre</a></li>
 						<li><a href="servicos.html" class="menu-footer-links">Serviços</a></li>
 						<li><a href="cursos" class="menu-footer-links">Cursos</a></li>
 						<li><a href="contato" class="menu-footer-links">Contato</a></li>
