update title about

--- a/sobre.html
+++ b/sobre.html
@@ -40,7 +40,7 @@
 
 			<li>
 				<div class="desc-sobre">					
-					<h2>Sobre a loja R2BlindFilm.</h2>
+					<h2>Sobre a loja Blind Glass Film.</h2>
 Somos a BLIN GLASS, uma empresa que atua a mais de 10 anos no segmento de comercio e terceirização de películas solares (insul film) e película de segurança. 
 Fundada em 10 de Junho de 2004, atuamos em parceria com as principais marcas de concessionárias automotivas (Renault, Nissan, Citroen, Ford, Toyota, Wolkswagen, entre outras).
 <br><br>
