update icon whatsapp

--- a/contato.html
+++ b/contato.html
@@ -12,7 +12,7 @@
 	<script src="js/script.js"></script>
 	<link rel="stylesheet" href="css/960.css">
 	<link rel="stylesheet" href="css/style-flag.css">
-<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 </head>
 <body>
 	<header class="main-header">
