inserted icon whatsapp

--- a/cursos.html
+++ b/cursos.html
@@ -12,7 +12,7 @@
 	<script type="text/javascript" src="js/jquery.navgoco.min.js"></script>
 	<script src="js/script.js"></script>
 	<link rel="stylesheet" href="css/960.css">
-	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 </head>
 <body>
 	<header class="main-header">
@@ -165,7 +165,7 @@
 
 		<div class="cursos-grade ">
 			<tr>
-				<td><p>Inscrição</p></td>
+				<td><p>Inscrições</p></td>
 			</tr>
 			<tr>
 				<i class="fa fa-whatsapp" aria-hidden="true"></i><br>(11)94747-0185<br>
@@ -184,7 +184,7 @@
 				<div class="grid_4 end-footer" >	
 					<ul >
 						<li>
-							Instalações nas dependencias das concessionarias parceiras<br>(11)94747-0185<br>
+							Instalações nas dependencias das concessionarias parceiras<br><i class="fa fa-whatsapp" aria-hidden="true"></i> (11)94747-0185<br>
 						</li>
 					</ul>
 				</div>
