(test) Inserted icons companies

--- a/contato.html
+++ b/contato.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="css/960.css">
 	<link rel="stylesheet" href="css/style-flag.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
 	<header class="main-header">
@@ -35,8 +36,15 @@
 	<br><br>
 	<div class="container contato">
 		<ul>
-			<li><p><strong>Endereço:</strong></p>Instalações nas dependencias das concessionarias parceiras<br><br><a href="tel:+551138437062"><i class="fa fa-whatsapp" aria-hidden="true"></i> (11) 94747-0185</a><br><!-- <a href="mailto:contato@r2blindfilm.com.br"><strong>contato@r2blindfilm.com.br</strong></a> --></li>
-			<li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29244.258069677617!2d-46.58909997712406!3d-23.621102282987476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5c9fac15d5ab%3A0xafd89c98f88c7f1d!2sAv.+Estrada+das+L%C3%A1grimas%2C+2836+-+S%C3%A3o+Jo%C3%A3o+Climaco%2C+S%C3%A3o+Paulo+-+SP!5e0!3m2!1spt-BR!2sbr!4v1434929107831" width="600" height="450" frameborder="0" style="border:0"></iframe></li>
+			<li><p><strong>Endereço:</strong></p><b>Instalações nas dependencias das concessionárias parceiras</b><br><br><a href="tel:+551138437062"><i class="fa fa-whatsapp" aria-hidden="true"></i> (11) 94747-0185</a><br><!-- <a href="mailto:contato@r2blindfilm.com.br"><strong>contato@r2blindfilm.com.br</strong></a> --></li>
+			<li>
+<div class="col-md-3"><img src="http://www.vw.com.br/pt/tools/constant_pool/_jcr_content/l100_framework_logo/file/_jcr_content./file.jpeg" alt=""></div>
+<div class="col-md-3"><img src="http://www.vw.com.br/pt/tools/constant_pool/_jcr_content/l100_framework_logo/file/_jcr_content./file.jpeg" alt=""></div>
+<div class="col-md-3"><img src="http://www.vw.com.br/pt/tools/constant_pool/_jcr_content/l100_framework_logo/file/_jcr_content./file.jpeg" alt=""></div>
+<div class="col-md-3"><img src="http://www.vw.com.br/pt/tools/constant_pool/_jcr_content/l100_framework_logo/file/_jcr_content./file.jpeg" alt=""></div>
+<div class="col-md-3"><img src="http://www.vw.com.br/pt/tools/constant_pool/_jcr_content/l100_framework_logo/file/_jcr_content./file.jpeg" alt=""></div>
+<div class="col-md-3"><img src="http://www.vw.com.br/pt/tools/constant_pool/_jcr_content/l100_framework_logo/file/_jcr_content./file.jpeg" alt=""></div>
+			<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29244.258069677617!2d-46.58909997712406!3d-23.621102282987476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5c9fac15d5ab%3A0xafd89c98f88c7f1d!2sAv.+Estrada+das+L%C3%A1grimas%2C+2836+-+S%C3%A3o+Jo%C3%A3o+Climaco%2C+S%C3%A3o+Paulo+-+SP!5e0!3m2!1spt-BR!2sbr!4v1434929107831" width="600" height="450" frameborder="0" style="border:0"></iframe> --></li>
 			
 		</ul>
 		
@@ -53,7 +61,7 @@
 				<div class="grid_4 end-footer" >	
 					<ul >
 						<li>
-							Instalações nas dependencias das concessionarias parceiras<br><i class="fa fa-whatsapp" aria-hidden="true"></i> (11)94747-0185<br>
+							Instalações nas dependencias das concessionárias parceiras<br><i class="fa fa-whatsapp" aria-hidden="true"></i> (11)94747-0185<br>
 						</li>
 					</ul>
 				</div>
