--- a/contato.html
+++ b/contato.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="css/960.css">
 	<link rel="stylesheet" href="css/style-flag.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
 </head>
 <body>
 	<header class="main-header">
@@ -40,18 +40,7 @@
 			<li class="col-md-3">
 				<img src="http://www.vw.com.br/pt/tools/constant_pool/_jcr_content/l100_framework_logo/file/_jcr_content./file.jpeg" alt="">
 				<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29244.258069677617!2d-46.58909997712406!3d-23.621102282987476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5c9fac15d5ab%3A0xafd89c98f88c7f1d!2sAv.+Estrada+das+L%C3%A1grimas%2C+2836+-+S%C3%A3o+Jo%C3%A3o+Climaco%2C+S%C3%A3o+Paulo+-+SP!5e0!3m2!1spt-BR!2sbr!4v1434929107831" width="600" height="450" frameborder="0" style="border:0"></iframe> --></li>
-				<li class="col-md-3">
-					<img src="http://www.vw.com.br/pt/tools/constant_pool/_jcr_content/l100_framework_logo/file/_jcr_content./file.jpeg" alt="">
-				</li>
-				<li class="col-md-3">
-					<img src="http://www.vw.com.br/pt/tools/constant_pool/_jcr_content/l100_framework_logo/file/_jcr_content./file.jpeg" alt="">
-				</li>
-				<li class="col-md-3">
-					<img src="http://www.vw.com.br/pt/tools/constant_pool/_jcr_content/l100_framework_logo/file/_jcr_content./file.jpeg" alt="">
-				</li>
-				<li class="col-md-3">
-					<img src="http://www.vw.com.br/pt/tools/constant_pool/_jcr_content/l100_framework_logo/file/_jcr_content./file.jpeg" alt="">
-				</li>
+
 				
 			</ul>
 			
