Inserted icon companie

--- a/contato.html
+++ b/contato.html
@@ -37,30 +37,34 @@
 	<div class="container contato">
 		<ul>
 			<li><p><strong>Endereço:</strong></p><b>Instalações nas dependencias das concessionárias parceiras</b><br><br><a href="tel:+551138437062"><i class="fa fa-whatsapp" aria-hidden="true"></i> (11) 94747-0185</a><br><!-- <a href="mailto:contato@r2blindfilm.com.br"><strong>contato@r2blindfilm.com.br</strong></a> --></li>
-			</ul>
+		</ul>
 
-			<ul>
+		<ul>
 			<li class="col-md-3">
 				<img src="http://www.vw.com.br/pt/tools/constant_pool/_jcr_content/l100_framework_logo/file/_jcr_content./file.jpeg" alt="">
 				<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29244.258069677617!2d-46.58909997712406!3d-23.621102282987476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5c9fac15d5ab%3A0xafd89c98f88c7f1d!2sAv.+Estrada+das+L%C3%A1grimas%2C+2836+-+S%C3%A3o+Jo%C3%A3o+Climaco%2C+S%C3%A3o+Paulo+-+SP!5e0!3m2!1spt-BR!2sbr!4v1434929107831" width="600" height="450" frameborder="0" style="border:0"></iframe> --></li>
-<li class="col-md-3">
-				<img src="http://www.vw.com.br/pt/tools/constant_pool/_jcr_content/l100_framework_logo/file/_jcr_content./file.jpeg" alt="">
+				<li class="col-md-3">
+					<img src="http://www.fiat.com.br/content/dam/fiat-brasil/designs/images/header/header-logo-fiat.png" alt="">
 				</li>
-<li class="col-md-3">
-				<img src="http://www.vw.com.br/pt/tools/constant_pool/_jcr_content/l100_framework_logo/file/_jcr_content./file.jpeg" alt="">
-				</li>				
+				<li class="col-md-3">
+					<img src="https://www.cdn.renault.com/content/dam/Renault/master/new-logo/renault_english_logo_desktop.png" alt="">
+				</li>
+				<li class="col-md-3">
+					<img src="https://libs.nissan-cdn.net/etc/designs/nissan/17.7.7-81/common-assets/img/logo/logo.png" alt="">
+				</li>		
 			</ul>
 
 			<ul>
-			<li class="col-md-3">
-				<img src="http://www.vw.com.br/pt/tools/constant_pool/_jcr_content/l100_framework_logo/file/_jcr_content./file.jpeg" alt="">
-				<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29244.258069677617!2d-46.58909997712406!3d-23.621102282987476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5c9fac15d5ab%3A0xafd89c98f88c7f1d!2sAv.+Estrada+das+L%C3%A1grimas%2C+2836+-+S%C3%A3o+Jo%C3%A3o+Climaco%2C+S%C3%A3o+Paulo+-+SP!5e0!3m2!1spt-BR!2sbr!4v1434929107831" width="600" height="450" frameborder="0" style="border:0"></iframe> --></li>
-<li class="col-md-3">
-				<img src="http://www.vw.com.br/pt/tools/constant_pool/_jcr_content/l100_framework_logo/file/_jcr_content./file.jpeg" alt="">
+				<li class="col-md-3">
+					<img src="http://www.carlogos.org/logo/Citroen-logo-1985-640x381.jpg" alt="">
 				</li>
-<li class="col-md-3">
-				<img src="http://www.vw.com.br/pt/tools/constant_pool/_jcr_content/l100_framework_logo/file/_jcr_content./file.jpeg" alt="">
-				</li>				
+				<li class="col-md-3">
+					<img src="http://www.chevrolet.com.br/content/dam/Chevrolet/lat-am/Brazil/nscwebsite/pt/Home/Homepage/01_images/2013-chevrolet-logo-92x40.png.jpg" alt="">
+				</li>
+				<li class="col-md-3">
+					<img src="https://www.bmw.com.br/content/dam/bmw/marketBR/bmw_com_br/images/logo/Novo_Logo_Site_BMW.png.asset.1480095604842.png" alt="">
+				</li>	
+
 			</ul>
 		</div>
 
