inserted icon company

--- a/contato.html
+++ b/contato.html
@@ -59,7 +59,7 @@
 					<img src="http://www.carlogos.org/logo/Citroen-logo-1985-640x381.jpg" alt="" width="87" height="78">
 				</li>
 				<li class="col-md-3">
-					<img src="http://www.chevrolet.com.br/content/dam/Chevrolet/lat-am/Brazil/nscwebsite/pt/Home/Homepage/01_images/2013-chevrolet-logo-92x40.png.jpg" alt="" width="87" height="78">
+					<img src="http://www.carlogos.org/logo/Chevrolet-logo-2013-640x281.jpg" alt="" width="87" height="78">
 				</li>
 				<li class="col-md-3">
 					<img src="https://www.bmw.com.br/content/dam/bmw/marketBR/bmw_com_br/images/logo/Novo_Logo_Site_BMW.png.asset.1480095604842.png" alt="" width="87" height="78">
