--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
 		<div class="rodape">
 			<div class="container">
 				<div class="grid_4 autorais-footer">	
-					<small>&copy; 2017 R2BlindFilm <br> Todo Direitos Reservados. <br> <!-- <a href="http://othiago.tk"><img src="img/ico/logofooter.png" class="criador" alt="Criado por www.othiago.tk"></a> --></small>
+					<small>&copy; 2017 Blind Glass Film<br> Todo Direitos Reservados. <br> <!-- <a href="http://othiago.tk"><img src="img/ico/logofooter.png" class="criador" alt="Criado por www.othiago.tk"></a> --></small>
 				</div>			
 				<div class="grid_4 end-footer" >	
 					<ul >
 						<li>
-							Atendemos em todas as concessionárias mais próxima da sua região<br>(11) 94747-0185<br>contato@r2blindfilm.com.br
+							Atendemos em todas as concessionárias mais próxima da sua região<br>(11) 94747-0185<br>contato@blindglassfilm.com.br
 						</li>
 					</ul>
 				</div>
