--- a/sobre.html
+++ b/sobre.html
@@ -41,7 +41,7 @@
 			<li>
 				<div class="desc-sobre">					
 					<h2>Sobre a Blind Glass Film</h2>
-Somos a BLIN GLASS FILM, uma empresa que atua a mais de 10 anos no segmento de comercio e terceirização de películas solares (insul film) e película de segurança. 
+Somos a BLIND GLASS FILM, uma empresa que atua a mais de 10 anos no segmento de comercio e terceirização de películas solares (insul film) e película de segurança. 
 Fundada em 10 de Junho de 2004, atuamos em parceria com as principais marcas de concessionárias automotivas (Renault, Nissan, Citroen, Ford, Toyota, Wolkswagen, entre outras).
 <br><br>
 Alem da aplicação da película comum (insul film), oferecemos com muito sucesso, a novidade BLIND GLASS FILM, uma película de resistência, aplicada nos vidros do automóvel. Essa aplicação é feita com os vidros removidos, isto é, preenchendo todos os espaços do vidro, tornando-o muito mais resistente a quebra e estilhaçamento.  
