--- a/cursos.html
+++ b/cursos.html
@@ -48,9 +48,9 @@
 				<ol>
 					<li> Conhecendo a película</li>
 					<li> Recorte do film </li>
-					<li> Limpeza dos vidros e aplicação</li>
-					<li> Modelagem do vidro traseiro</li>
 					<li> Acabamento</li>
+					<li> Modelagem do vidro traseiro</li>
+
 				</ol>
 				
 			</td>
@@ -150,9 +150,7 @@
 				<td>&#10003 À vista<br> R$920,00</td>
 			</tr>
 			<br><br>
-			<tr>
-				<td>&#10003 3 vezes <br> consulte-nos forma de pagamento</td>
-			</tr>
+
 		</div>
 		<div class="cursos-grade ">
 			<tr>
@@ -168,7 +166,7 @@
 				<td><p>Inscrições</p></td>
 			</tr>
 			<tr>
-				<i class="fa fa-whatsapp" aria-hidden="true"></i><br>(11)94747-0185<br>
+				<i class="fa fa-whatsapp" aria-hidden="true"></i> (11)94747-0185<br>
 
 			</tr>
 		</div>
