--- a/contato.html
+++ b/contato.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 	<meta charset="UTF-8">
-	https://libs.nissan-cdn.net/etc/designs/nissan/17.7.7-81/common-assets/img/logo/logo.png<title>BLIND GLASS FILM</title>
+	<title>BLIND GLASS FILM</title>
 	<script src="js/jquery-1.11.0.min.js"></script>
 	<link rel="icon" href="img/ico/icon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/style.css">
