--- a/contato.html
+++ b/contato.html
@@ -74,7 +74,7 @@
 			<div class="rodape">
 				<div class="container">
 					<div class="grid_4 autorais-footer">	
-						<small>&copy; 2017 R2BlindFilm <br> Todo Direitos Reservados. <br> <!-- <a href="http://othiago.tk"><img src="img/ico/logofooter.png" class="criador" alt="Criado por www.othiago.tk"></a> --></small>
+						<small>&copy; 2017 BLIND GLASS FILM <br> Todo Direitos Reservados. <br> <!-- <a href="http://othiago.tk"><img src="img/ico/logofooter.png" class="criador" alt="Criado por www.othiago.tk"></a> --></small>
 					</div>			
 					<div class="grid_4 end-footer" >	
 						<ul >
