--- a/servicos.html
+++ b/servicos.html
@@ -25,7 +25,7 @@
 					<li class="main-nav-item"><a href="cursos.html" class="main-nav-links">Cursos</a></li>
 					<li class="main-nav-item"><a href="contato.html" class="main-nav-links">Contato</a></li>
 					<li class="main-nav-item socias"><a href="https://www.facebook.com/blindglassfilm" target="_blank" class="ico-facebook">facebook</a></li>
-					<li class="main-nav-item socias"><a href="https://instagram.com/blindglassfilm" target="_blank" class="ico-instagram">instagram</a></li>
+					<!-- <li class="main-nav-item socias"><a href="https://instagram.com/blindglassfilm" target="_blank" class="ico-instagram">instagram</a></li> -->
 				</ul>
 			</nav>
 		</div>
