--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 				<div class="grid_4 end-footer" >	
 					<ul >
 						<li>
-							Atendemos em todas as concessionárias mais próxima da sua região<br>(11) 94747-0185<br>contato@blindglassfilm.com.br
+							Atendemos nas concessionárias parceiras mais próximas da sua região consulte-nos <i class="fa fa-whatsapp" aria-hidden="true"></i> (11) 94747-0185<br> contato@blindglassfilm.com.br
 						</li>
 					</ul>
 				</div>
