--- a/contato.html
+++ b/contato.html
@@ -79,7 +79,7 @@
 					<div class="grid_4 end-footer" >	
 						<ul >
 							<li>
-								Instalações nas dependencias das concessionárias parceiras<br><i class="fa fa-whatsapp" aria-hidden="true"></i> (11)94747-0185<br>
+								Atendemos nas concessionárias parceiras mais próximas da sua região consulte-nos <i class="fa fa-whatsapp" aria-hidden="true"></i> (11) 94747-0185<br> contato@blindglassfilm.com.br
 							</li>
 						</ul>
 					</div>
