--- a/servicos.html
+++ b/servicos.html
@@ -199,7 +199,7 @@
 			<div class="grid_4 end-footer" >	
 				<ul >
 					<li>
-						Instalaçoes nas dependencias das concessionarias parceiras<br>(11)94747-0185<br>
+						Atendemos nas concessionárias parceiras mais próximas da sua região consulte-nos <i class="fa fa-whatsapp" aria-hidden="true"></i> (11) 94747-0185<br> contato@blindglassfilm.com.br
 					</li>
 				</ul>
 			</div>
