--- a/sobre.html
+++ b/sobre.html
@@ -70,7 +70,7 @@ Na medida em que são fabricados e vendidos milhares de carros no país, aumenta
 				<div class="grid_4 end-footer" >	
 					<ul >
 						<li>
-							Atendemos nas concessionárias mais próximas da sua região consulte-nos<br>Whats: (11) 94747-0185<br>
+							Atendemos nas concessionárias parceiras mais próximas da sua região consulte-nos <i class="fa fa-whatsapp" aria-hidden="true"></i> (11) 94747-0185<br> contato@blindglassfilm.com.br
 						</li>
 					</ul>
 				</div>
