--- a/cursos.html
+++ b/cursos.html
@@ -13,6 +13,7 @@
 	<script src="js/script.js"></script>
 	<link rel="stylesheet" href="css/960.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
 	<header class="main-header">
@@ -182,7 +183,9 @@
 				<div class="grid_4 end-footer" >	
 					<ul >
 						<li>
-							Atendemos nas concessionárias parceiras mais próximas da sua região consulte-nos <i class="fa fa-whatsapp" aria-hidden="true"></i> (11) 94747-0185<br> contato@blindglassfilm.com.br
+														<br>
+							Atendemos nas concessionárias parceiras mais próximas da sua região consulte-nos <br> <i class="fa fa-whatsapp" aria-hidden="true"></i> (11) 94747-0185<br> contato@blindglassfilm.com.br
+							<br>
 						</li>
 					</ul>
 				</div>
