--- a/servicos.html
+++ b/servicos.html
@@ -11,7 +11,7 @@
 	<script type="text/javascript" src="js/jquery.navgoco.min.js"></script>
 	<script src="js/script.js"></script>
 	<link rel="stylesheet" href="css/960.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 	
 </head>
 <body>
