--- a/cursos.html
+++ b/cursos.html
@@ -63,7 +63,7 @@
 		</tr>
 		<tr>
 			<td>
-				O curso de aplicação de insul film na R2 Blind Film´s será dividido em 4 partes, sendo realizado em 2 dias com carga horária de 3 horas, totalizando 6 horas para a finalização do curso.
+				O curso de aplicação de insul film na Blind Glass Film será dividido em 4 partes, sendo realizado em 2 dias com carga horária de 3 horas, totalizando 6 horas para a finalização do curso.
 				O aluno aprenderá teoria e noções técnicas de aplicação, adquirindo conhecimento suficiente para iniciar na pratica,sendo que a performance profissional depende do empenho e a vontade de aprender de cada aluno.
 				<p>Conhecendo as ferramentas para aplicação</p>
 				&#8226 Pulverizador (Bomba de água) <br>
