--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 				<a href="servicos.html" class="trs"><img src="img/carrosel1.jpg" alt=""></a>
 				<a href="sobre.html" class="trs"><img src="img/carrosel2.jpg" alt=""></a>
 				<a href="cursos.html" class="trs"><img src="img/carrosel3.jpg" alt=""></a>
+				<a href="cursos.html" class="trs"><img src="img/carrosel4.jpg" alt=""></a>
 			</div>
 			<figcaption></figcaption>
 		</figure>	
