--- a/contato.html
+++ b/contato.html
@@ -36,7 +36,7 @@
 	<br><br>
 	<div class="container contato">
 		<ul>
-			<li><p><strong>Endereço:</strong></p><b>Instalações nas dependencias das concessionárias parceiras</b><br><br><a href="tel:+551138437062"><i class="fa fa-whatsapp" aria-hidden="true"></i> (11) 94747-0185</a><br><!-- <a href="mailto:contato@r2blindfilm.com.br"><strong>contato@r2blindfilm.com.br</strong></a> --></li>
+			<li><p><strong>Endereço:</strong></p><b>Atendemos nas concessionárias parceiras mais próximas da sua região consulte-nos</b><br><br><i class="fa fa-whatsapp" aria-hidden="true"></i> (11) 94747-0185<br> contato@blindglassfilm.com.br</li>
 		</ul>
 
 		<ul>
@@ -80,7 +80,7 @@
 						<ul >
 							<li>
 															<br>
-							Atendemos nas concessionárias parceiras mais próximas da sua região consulte-nos <br> <i class="fa fa-whatsapp" aria-hidden="true"></i> (11) 94747-0185<br> contato@blindglassfilm.com.br
+							Privacidade e Segurança para o seu Veículo <br> <i class="fa fa-whatsapp" aria-hidden="true"></i> (11) 94747-0185<br> contato@blindglassfilm.com.br
 							<br>
 							</li>
 						</ul>
