--- a/cursos.html
+++ b/cursos.html
@@ -184,7 +184,7 @@
 					<ul >
 						<li>
 														<br>
-							Atendemos nas concessionárias parceiras mais próximas da sua região consulte-nos <br> <i class="fa fa-whatsapp" aria-hidden="true"></i> (11) 94747-0185<br> contato@blindglassfilm.com.br
+							Privacidade e Segurança para o seu Veículo <br> <i class="fa fa-whatsapp" aria-hidden="true"></i> (11) 94747-0185<br> contato@blindglassfilm.com.br
 							<br>
 						</li>
 					</ul>
