--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 	<title>BLIND GLASS FILM</title>
 	<link rel="icon" href="img/ico/icon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/normalize.css">
-	<script type="text/javascript" src="js/slide.js"></script>
 	<link rel="stylesheet" href="css/960.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 </head>
 <body>
-	<header class="main-header">
+<!-- 	<header class="main-header">
 		<div class="container">
 			<h1><a href="index.html" class="logo">logotipo</a></h1>
 			<nav class="main-nav">
@@ -22,34 +22,26 @@
 					<li class="main-nav-item"><a href="cursos.html" class="main-nav-links">Cursos</a></li>
 					<li class="main-nav-item"><a href="contato.html" class="main-nav-links">Contato</a></li>
 					<li class="main-nav-item socias"><a href="https://www.facebook.com/blindglassfilm" target="_blank" class="ico-facebook">facebook</a></li>
-					<!-- <li class="main-nav-item socias"><a href="https://instagram.com/blindglassfilm" target="_blank" class="ico-instagram">instagram</a></li> -->
 				</ul>
 			</nav>
 		</div>
-	</header>
+	</header> -->
 	<hr>
-	<section class="main-carrosel">
-		<figure>
-			<span class="trs next"></span>
-			<span class="trs prev"></span>
-			<div id="slider">
-				<a href="servicos.html" class="trs"><img src="img/carrosel1.jpg" alt=""></a>
-				<a href="sobre.html" class="trs"><img src="img/carrosel2.jpg" alt=""></a>
-				<a href="cursos.html" class="trs"><img src="img/carrosel3.jpg" alt=""></a>
-				<a href="cursos.html" class="trs"><img src="img/carrosel6.jpg" alt=""></a>
-			</div>
-			<figcaption></figcaption>
-		</figure>	
-<!-- 		<div class="carrosel">
-			<button class="prev">Anterior</button>
-			<ul class="tamanho">
-				<li><a href=""><img src="img/carrosel1.jpg" alt="" class="img-carrosel"></a></li>
-				<li><a href=""><img src="img/carrosel2.jpg" alt="" class="img-carrosel"></a></li>
-			</ul>
-			<button class="next">Próximo</button>
-		</div> -->
-	</section>
+	<div class="owl-theme owl-carousel">
+		<div>
+		<img src="img/carrosel1.jpg" alt="">
+		</div>
 
+		<div>
+			<img src="img/carrosel2.jpg" alt="">
+		</div>
+
+		<div>
+			<img src="img/carrosel3.jpg" alt="">
+		</div>
+
+	</div>
+<!-- 
 	<section class="container servicos">
 		<h2>Serviços <hr></h2>
 
@@ -62,7 +54,7 @@
 				<a href="cursos.html"><img src="img/curso22.jpg" alt=""></a>
 				<p>Cursos</p> 
 			</div>
-		</div><!-- box -->
+		</div>
 
 		<div class="box">
 			<div class="border-top"></div>
@@ -73,18 +65,7 @@
 				<a href="servicos.html"><img src="img/serviços/3.jpg" height="150" width="150" alt=""></a>
 				<p>Aplicação InsulFilm</p>
 			</div>
-		</div><!-- box -->
-
-<!-- 		<div class="box">
-			<div class="border-top"></div>
-			<div class="border-right"></div>
-			<div class="border-bottom"></div>
-			<div class="border-left"></div>
-			<div class="inner-content">
-				<a href="#"><img src="img/envelopamento2.jpg" alt=""></a>
-				<p>Envelopamento</p>
-			</div>
-		</div> -->
+		</div>
 
 		<div class="box">
 			<div class="border-top"></div>
@@ -119,13 +100,13 @@
 			</div>
 		</div>
 		
-	</section>
+	</section> -->
 	
-	<footer>
+<!-- 	<footer>
 		<div class="rodape">
 			<div class="container">
 				<div class="grid_4 autorais-footer">	
-					<small>&copy; 2017 Blind Glass Film<br> Todo Direitos Reservados. <br> <!-- <a href="http://othiago.tk"><img src="img/ico/logofooter.png" class="criador" alt="Criado por www.othiago.tk"></a> --></small>
+					<small>&copy; 2017 Blind Glass Film<br> Todo Direitos Reservados. <br> </small>
 				</div>			
 				<div class="grid_4 end-footer" >	
 					<ul >
@@ -154,7 +135,10 @@
 				</center></a>
 			</div>
 		</div>
-	</footer>
+	</footer> -->
+    <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="js/owl.carousel.min.js"></script>    
+	<!-- <script type="text/javascript" src="js/slide.js"></script> -->
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
