--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		</div>
 
 	</div>
-<!-- 
+
 	<section class="container servicos">
 		<h2>Serviços <hr></h2>
 
@@ -100,9 +100,9 @@
 			</div>
 		</div>
 		
-	</section> -->
+	</section>
 	
-<!-- 	<footer>
+	<footer>
 		<div class="rodape">
 			<div class="container">
 				<div class="grid_4 autorais-footer">	
@@ -135,7 +135,7 @@
 				</center></a>
 			</div>
 		</div>
-	</footer> -->
+	</footer>
     <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="js/owl.carousel.min.js"></script>    
 	<!-- <script type="text/javascript" src="js/slide.js"></script> -->
