--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 </head>
 <body>
-<!-- 	<header class="main-header">
+	<header class="main-header">
 		<div class="container">
 			<h1><a href="index.html" class="logo">logotipo</a></h1>
 			<nav class="main-nav">
@@ -25,7 +25,7 @@
 				</ul>
 			</nav>
 		</div>
-	</header> -->
+	</header>
 	<hr>
 	<div class="owl-theme owl-carousel">
 		<div>
