Inserted link in the carousel

--- a/index.html
+++ b/index.html
@@ -29,15 +29,19 @@
 	<hr>
 	<div class="owl-theme owl-carousel">
 		<div>
-		<img src="img/carrosel1.jpg" alt="">
+		<a href="servicos.html"><img src="img/carrosel1.jpg" alt=""></a>
 		</div>
 
 		<div>
-			<img src="img/carrosel2.jpg" alt="">
+			<a href="sobre.html"><img src="img/carrosel2.jpg" alt=""></a>
 		</div>
 
 		<div>
-			<img src="img/carrosel3.jpg" alt="">
+			<a href="cursos.html"><img src="img/carrosel3.jpg" alt=""></a>
+		</div>
+
+		<div>
+			<a href="cursos.html"><img src="img/carrosel6.jpg" alt=""></a>
 		</div>
 
 	</div>
