--- a/index.html
+++ b/index.html
@@ -46,63 +46,68 @@
 
 	</div>
 
-	<section class="container servicos">
-		<h2>Serviços <hr></h2>
+<div>
+	<p>&nbsp;</p>
+	<p>&nbsp;</p>
+</div>
 
-		<div class="box">
+	<section class="container servicos owl-carousel2 owl-theme2">
+		<!-- <h2>Serviços <hr></h2> -->
+
+		<!-- <div class="box">
 			<div class="border-top"></div>
 			<div class="border-right"></div>
 			<div class="border-bottom"></div>
-			<div class="border-left"></div>
-			<div class="inner-content">
+			<div class="border-left"></div> -->
+			<div class="inner-content item">
 				<a href="cursos.html"><img src="img/curso22.jpg" alt=""></a>
 				<p>Cursos</p> 
 			</div>
-		</div>
+<!-- 		</div> -->
 
-		<div class="box">
+	<!-- 	<div class="box">
 			<div class="border-top"></div>
 			<div class="border-right"></div>
 			<div class="border-bottom"></div>
-			<div class="border-left"></div>
-			<div class="inner-content">
+			<div class="border-left"></div> -->
+			<div class="inner-content item">
 				<a href="servicos.html"><img src="img/serviços/3.jpg" height="150" width="150" alt=""></a>
 				<p>Aplicação InsulFilm</p>
 			</div>
-		</div>
+	<!-- 	</div> -->
 
-		<div class="box">
+		<!-- <div class="box">
 			<div class="border-top"></div>
 			<div class="border-right"></div>
 			<div class="border-bottom"></div>
-			<div class="border-left"></div>
-			<div class="inner-content">
+			<div class="border-left"></div> -->
+			<div class="inner-content item">
 				<a href="servicos.html"><img src="img/serviços/1.jpg" height="200" width="300" alt=""></a>
 				<p>Residencial</p>
 			</div>
-		</div>
-
+		<!-- </div> -->
+<!-- 
 		<div class="box">
 			<div class="border-top"></div>
 			<div class="border-right"></div>
 			<div class="border-bottom"></div>
-			<div class="border-left"></div>
-			<div class="inner-content">
+			<div class="border-left"></div> -->
+			<div class="inner-content item">
 				<a href="contato.html"><img src="img/ofertas.png" alt=""></a>
 				<p>Diversos</p>
 			</div>
-		</div>
-
+		<!-- </div> -->
+<!-- 
 		<div class="box">
 			<div class="border-top"></div>
 			<div class="border-right"></div>
 			<div class="border-bottom"></div>
-			<div class="border-left"></div>
-			<div class="inner-content">
+			<div class="border-left"></div> -->
+			<div class="inner-content item">
 				<a href="contato.html"><img src="img/insulfilm-diversos.jpg" alt=""></a>
 				<p>Produtos</p>
 			</div>
-		</div>
+	<!-- 	</div> -->
 		
 	</section>
 	
